--- a/frontend/src/components/overlay/OverlayContentEditBudget.scss
+++ b/frontend/src/components/overlay/OverlayContentEditBudget.scss
@@ -5,7 +5,7 @@
 
 .overlayContentEditBudgetNotAllowed {
   cursor: not-allowed;
-  color: var(--grey-500);
+  color: colors.$grey-500;
 }
 
 .overlayContentEditBudgetNoEvents {
