--- a/frontend/src/components/overview/budgets/OverviewBudgets.scss
+++ b/frontend/src/components/overview/budgets/OverviewBudgets.scss
@@ -2,7 +2,7 @@
 
 .overviewBudgets {
   border-radius: 12px;
-  background-color: var(--white-0);
+  background-color: colors.$white-0;
   padding: 32px;
   display: flex;
   flex-direction: column;
