--- a/frontend/src/styles/spaces.scss
+++ b/frontend/src/styles/spaces.scss
@@ -10,5 +10,7 @@ $spaceL: functions.to-rem(24px);
 $spaceXL: functions.to-rem(32px);
 $spaceXXL: functions.to-rem(40px);
 
+$radiusXS: functions.to-rem(4px);
 $radiusS: functions.to-rem(8px);
 $radiusMS: functions.to-rem(12px);
+$radiusML: functions.to-rem(20px);
