--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -28,7 +28,7 @@
 }
 
 .webapp {
-  background-color: var(--beige-100);
+  background-color: colors.$beige-100;
   height: auto;
   min-height: calc(100vh - 14px);
   position: relative;
