--- a/frontend/src/components/CardHeader.scss
+++ b/frontend/src/components/CardHeader.scss
@@ -1,3 +1,4 @@
+@use '../styles/colors';
 @use '../styles/screens';
 
 .cardHeader {
@@ -13,61 +14,58 @@
   width: 16px;
 }
 .cardHeaderCircle.green{
-  background-color: var(--green);
+  background-color: colors.$green;
 }
 .cardHeaderCircle.yellow{
-  background-color: var(--yellow);
+  background-color: colors.$yellow;
 }
 .cardHeaderCircle.cyan{
-  background-color: var(--cyan);
+  background-color: colors.$cyan;
 }
 .cardHeaderCircle.navy{
-  background-color: var(--navy);
+  background-color: colors.$navy;
 }
 .cardHeaderCircle.red{
-  background-color: var(--red);
+  background-color: colors.$red;
 }
 .cardHeaderCircle.purple{
-  background-color: var(--purple);
+  background-color: colors.$purple;
 }
 .cardHeaderCircle.turquoise{
-  background-color: var(--turquoise);
+  background-color: colors.$turquoise;
 }
 .cardHeaderCircle.brown{
-  background-color: var(--brown);
-}
-.cardHeaderCircle.brown{
-  background-color: var(--brown);
+  background-color: colors.$brown;
 }
 .cardHeaderCircle.magenta{
-  background-color: var(--magenta);
+  background-color: colors.$magenta;
 }
 .cardHeaderCircle.blue{
-  background-color: var(--blue);
+  background-color: colors.$blue;
 }
 .cardHeaderCircle.grey{
-  background-color: var(--navy-grey);
+  background-color: colors.$navy-grey;
 }
 .cardHeaderCircle.army{
-  background-color: var(--army-green);
+  background-color: colors.$army-green;
 }
 .cardHeaderCircle.pink{
-  background-color: var(--pink);
+  background-color: colors.$pink;
 }
 .cardHeaderCircle.gold{
-  background-color: var(--gold);
+  background-color: colors.$gold;
 }
 .cardHeaderCircle.orange{
-  background-color: var(--orange);
+  background-color: colors.$orange;
 }
 .cardHeaderCircle.sepia{
-  background-color: var(--beige-100);
+  background-color: colors.$beige-100;
 }
 .cardHeaderCircle.white{
-  background-color: var(--white);
+  background-color: colors.$white;
 }
 .cardHeaderCircle.black{
-  background-color: var(--black);
+  background-color: colors.$black;
 }
 
 .cardHeaderEditIcon {
@@ -79,7 +77,7 @@
 }
 .cardHeaderEditIcon:focus-visible {
   border-radius: 4px;
-  box-shadow: 0 0 0 2px var(--grey-900);
+  box-shadow: 0 0 0 2px colors.$grey-900;
   filter: invert(74%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(0%) contrast(100%);
   outline: none;
 }
