--- a/frontend/src/components/HeaderBar.scss
+++ b/frontend/src/components/HeaderBar.scss
@@ -6,25 +6,25 @@
 .headerBarButton {
   border: 0;
   border-radius: 8px;
-  background-color: var(--grey-900);
+  background-color: colors.$grey-900;
   padding: 16px;
   font-weight: 600;
-  color: var(--white-0);
+  color: colors.$white-0;
   cursor: pointer;
 }
 .headerBarButton:hover {
-  background-color: var(--beige-500);
+  background-color: colors.$beige-500;
   transition: background-color 0.2s ease;
   outline: none;
 }
 .headerBarButton:focus-visible{
   border-radius: 8px;
-  box-shadow: 0 0 0 2px var(--grey-900);
-  border-color: var(--grey-900);
-  background-color: var(--beige-500);
+  box-shadow: 0 0 0 2px colors.$grey-900;
+  border-color: colors.$grey-900;
+  background-color: colors.$beige-500;
   padding: 16px;
   font-weight: 600;
-  color: var(--white-0);
+  color: colors.$white-0;
   cursor: pointer;
   transition: background-color 0.2s ease;
   outline: none;
