--- a/frontend/src/components/budgets/BudgetsDiagram.scss
+++ b/frontend/src/components/budgets/BudgetsDiagram.scss
@@ -19,7 +19,7 @@ $size: 240px;
 }
 
 .overviewBudgetsDiagramCircleMiddle {
-  background-color: var(--white-0);
+  background-color: colors.$white-0;
   width: 80%;
   height: 80%;
   border-radius: 50%;
@@ -32,7 +32,7 @@ $size: 240px;
 }
 
 .overviewBudgetsDiagramCircleSmall {
-  background-color: var(--white-0);
+  background-color: colors.$white-0;
   width: 70%;
   height: 70%;
   border-radius: 50%;
@@ -50,11 +50,11 @@ $size: 240px;
   font-size: 32px;
   font-weight: 700;
   z-index: 2;
-  color: var(--grey-900);
+  color: colors.$grey-900;
 }
 
 .overviewBudgetsDiagramTotal {
   font-size: 12px;
   z-index: 2;
-  color: var(--grey-500);
+  color: colors.$grey-500;
 }
