--- a/frontend/src/components/overview/pots/OverviewPots.scss
+++ b/frontend/src/components/overview/pots/OverviewPots.scss
@@ -2,7 +2,7 @@
 
 .overviewPots {
   border-radius: 12px;
-  background-color: var(--white-0);
+  background-color: colors.$white-0;
   padding: 32px;
   display: grid;
   grid-template-rows: auto auto;
