--- a/frontend/src/components/pots/PotCardDetails.scss
+++ b/frontend/src/components/pots/PotCardDetails.scss
@@ -3,12 +3,12 @@
 .potCardDetailsPercentCurrent {
   font-size: 12px;
   font-weight: 600;
-  color: var(--grey-500);
+  color: colors.$grey-500;
 }
 
 .potCardDetailsPercentTotal {
   font-size: 12px;
-  color: var(--grey-500);
+  color: colors.$grey-500;
 }
 
 .potCardDetailsTotal {
@@ -28,12 +28,12 @@
 .potCardDetailsTotalLabel {
   flex-grow: 1;
   font-size: 14px;
-  color: var(--grey-500);
+  color: colors.$grey-500;
 }
 
 .potCardBarCurrent {
   border-radius: 4px;
-  background-color: var(--green);
+  background-color: colors.$green;
   height: 8px;
   width: var(--barCurrentWidthPercent);
   max-width: 100%;
@@ -41,25 +41,25 @@
   position: absolute;
 }
 .potCardBarCurrent.green{
-  background-color: var(--green);
+  background-color: colors.$green;
 }
 .potCardBarCurrent.cyan{
-  background-color: var(--cyan);
+  background-color: colors.$cyan;
 }
 .potCardBarCurrent.yellow{
-  background-color: var(--yellow);
+  background-color: colors.$yellow;
 }
 .potCardBarCurrent.navy{
-  background-color: var(--navy);
+  background-color: colors.$navy;
 }
 .potCardBarCurrent.purple{
-  background-color: var(--purple);
+  background-color: colors.$purple;
 }
 
 .potCardBarMax {
   margin: 16px 0;
   border-radius: 4px;
-  background-color: var(--beige-100);
+  background-color: colors.$beige-100;
   height: 8px;
   position: relative;
 }
