--- a/frontend/src/components/transactions/TransactionsDetails.scss
+++ b/frontend/src/components/transactions/TransactionsDetails.scss
@@ -2,7 +2,7 @@
 
 .transactionsDetails {
   border-radius: 12px;
-  background-color: var(--white-0);
+  background-color: colors.$white-0;
   padding: 32px;
   height: 100%;
   display: grid;
