--- a/frontend/src/components/transactions/pagination/PaginationButtonNext.scss
+++ b/frontend/src/components/transactions/pagination/PaginationButtonNext.scss
@@ -3,13 +3,13 @@
 .paginationButtonNext {
   margin-left: 8px;
   border-radius: 8px;
-  border: 1px solid var(--beige-500);
-  background-color: var(--white-0);
+  border: 1px solid colors.$beige-500;
+  background-color: colors.$white-0;
   padding: 12px 16px 10px 16px;
   display: flex;
   flex-direction: row;
   align-items: center;
-  color: var(--grey-900);
+  color: colors.$grey-900;
   transition:
           border 0.3s ease,
           border-color 0.3s ease,
@@ -21,9 +21,9 @@
   }
 }
 .paginationButtonNext.isEnabled:hover {
-  border: 1px solid var(--beige-500);
-  background-color: var(--beige-500);
-  color: var(--white-0);
+  border: 1px solid colors.$beige-500;
+  background-color: colors.$beige-500;
+  color: colors.$white-0;
   cursor: pointer;
 
   .paginationButtonNextCaret {
@@ -31,19 +31,19 @@
   }
 }
 .paginationButtonNext.isEnabled:focus-visible {
-  border-color: var(--beige-500);
+  border-color: colors.$beige-500;
   outline: none;
-  box-shadow: 0 0 0 2px var(--grey-900);
+  box-shadow: 0 0 0 2px colors.$grey-900;
 }
 .paginationButtonNext.isDisabled {
-  border: 1px solid var(--grey-100);
-  background-color: var(--grey-100);
-  color: var(--grey-500);
+  border: 1px solid colors.$grey-100;
+  background-color: colors.$grey-100;
+  color: colors.$grey-500;
   cursor: not-allowed;
 }
 .paginationButtonNext.isDisabled:focus-visible {
-  border: 1px solid var(--component-background-light);
-  box-shadow: 0 0 0 2px var(--component-background-light);
+  border: 1px solid colors.$component-background-light;
+  box-shadow: 0 0 0 2px colors.$component-background-light;
   outline: none;
 }
 
