--- a/frontend/src/components/transactions/pagination/PaginationPages.scss
+++ b/frontend/src/components/transactions/pagination/PaginationPages.scss
@@ -1,3 +1,4 @@
+@use '../../../styles/colors';
 @use '../../../styles/screens';
 
 .paginationPages {
@@ -8,13 +9,13 @@
 
 .paginationPagesButton {
   border-radius: 8px;
-  border: 1px solid var(--beige-500);
-  background-color: var(--white-0);
+  border: 1px solid colors.$beige-500;
+  background-color: colors.$white-0;
   padding: 12px 16px 10px 16px;
   display: flex;
   flex-direction: row;
   align-items: center;
-  color: var(--grey-900);
+  color: colors.$grey-900;
   transition:
           border 0.3s ease,
           border-color 0.3s ease,
@@ -22,24 +23,24 @@
           box-shadow 0.3s ease;
 }
 .paginationPagesButton.isActive {
-  border: 1px solid var(--grey-900);
-  box-shadow: 0 0 0 2px var(--grey-900);
-  background-color: var(--grey-900);
-  color: var(--white-0);
+  border: 1px solid colors.$grey-900;
+  box-shadow: 0 0 0 2px colors.$grey-900;
+  background-color: colors.$grey-900;
+  color: colors.$white-0;
 }
 .paginationPagesButton.isActive:focus-visible {
-  border: 1px solid var(--component-background-light);
-  box-shadow: 0 0 0 2px var(--component-background-light);
+  border: 1px solid colors.$component-background-light;
+  box-shadow: 0 0 0 2px colors.$component-background-light;
   outline: none;
 }
 .paginationPagesButton.isNotActive:hover {
-  border: 1px solid var(--beige-500);
-  background-color: var(--beige-500);
-  color: var(--white-0);
+  border: 1px solid colors.$beige-500;
+  background-color: colors.$beige-500;
+  color: colors.$white-0;
   cursor: pointer;
 }
 .paginationPagesButton.isNotActive:focus-visible {
-  border-color: var(--beige-500);
+  border-color: colors.$beige-500;
   outline: none;
-  box-shadow: 0 0 0 2px var(--grey-900);
+  box-shadow: 0 0 0 2px colors.$grey-900;
 }
