--- a/frontend/src/components/budgets/BudgetsDiagram.scss
+++ b/frontend/src/components/budgets/BudgetsDiagram.scss
@@ -1,4 +1,10 @@
-$size: 240px;
+@use '../../styles/colors';
+@use '../../styles/fonts';
+@use '../../styles/functions';
+@use '../../styles/screens';
+@use '../../styles/spaces';
+
+$size: functions.to-rem(240px);
 
 .overviewBudgetsDiagram {
   width: 100%;
@@ -12,7 +18,7 @@ $size: 240px;
   border-radius: 50%;
   display: flex;
   flex-direction: column;
-  row-gap: 8px;
+  row-gap: spaces.$spaceS;
   justify-content: center;
   align-items: center;
   position: relative;
@@ -38,7 +44,7 @@ $size: 240px;
   border-radius: 50%;
   display: flex;
   flex-direction: column;
-  row-gap: 8px;
+  row-gap: spaces.$spaceS;
   justify-content: center;
   align-items: center;
   position: relative;
@@ -47,14 +53,15 @@ $size: 240px;
 }
 
 .overviewBudgetsDiagramSpend {
-  font-size: 32px;
-  font-weight: 700;
-  z-index: 2;
   color: colors.$grey-900;
+  z-index: 2;
+
+  @include fonts.text-preset-1;
 }
 
 .overviewBudgetsDiagramTotal {
-  font-size: 12px;
-  z-index: 2;
   color: colors.$grey-500;
+  z-index: 2;
+
+  @include fonts.text-preset-5;
 }
